created changelog to rename tag_links -> tags_links